web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/no-callee/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,9)
1|() => {}()
 |       ^
[SyntaxError]: Parentheses expression can not be empty. (1,9)
1|() => {}()
 |       ^
